--- a/面试题/01_2020版Java基础 15 题.md
+++ b/面试题/01_2020版Java基础 15 题.md
@@ -34,10 +34,9 @@ Error 和 Exception 都是java错误处理机制的一部分，都继承了Throw
 
   零拷贝是网络编程关键，很多性能优化都离不开。
 
+### 6. StringBuilder会不会出现内存泄露
 
-1、核心线程是在什么时候创建的
-2、主线程是如何捕捉到子线程的异常的
-3、StringBuilder会不会出现内存泄露
-4、JVM是如何区分数据、指针的
-5、StringBuilder的append方法源码级别
-6、服务器最多可以连接的线程数
+
+
+### 7. StringBuilder的append方法源码级别
+
