--- a/面试题/03_2020版Java多线程 12 题.md
+++ b/面试题/03_2020版Java多线程 12 题.md
@@ -1,4 +1,4 @@
-## 2020版Java多线程面试题
+## Java多线程面试题
 
 ### 1. 并行和并发有什么区别？ 
 
@@ -175,3 +175,8 @@ ThreadPoolExecutor threadPoolExecutor = new ThreadPoolExecutor(20, 50, 30,
 * execute()：只能执行 Runnable 类型的任务。 
 * submit()：可以执行 Runnable 和 Callable 类型的任务。 Callable 类型的任务可以获取执行的返回值，而 Runnable 执行无返回值。 
 
+### 15. 核心线程是在什么时候创建的？
+
+### 16. 主线程是如何捕捉到子线程的异常的？
+
+### 17. 服务器最多可以连接的线程数
