--- a/面试题/13_2020版消息队列 6 题.md
+++ b/面试题/13_2020版消息队列 6 题.md
@@ -12,7 +12,7 @@
 
    ![img](https://mmbiz.qpic.cn/mmbiz_png/azicia1hOY6Q9ic077HnPNN4qjjtPunia79BCJrmrKYGneZLnSmiaWrzux8vVia9VNzeo1gXca0vkQ1cwu3WqKSzVtrQ/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1&wx_co=1) 
 
-* 流量控制
+* 削峰-流量控制
 
   想必大家都听过「削峰填谷」，后端服务相对而言都是比较「弱」的，因为业务较重，处理时间较长。像一些秒杀活动爆发式流量打过来可能就顶不住了。因此需要引入一个中间件来做缓冲，消息队列再适合不过了。
 
@@ -93,7 +93,7 @@
 幂等处理重复消息：
 
 1. 数据库的唯一约束。
-2. 记录关键的key标识。
+2. 记录关键的key标识。以redis为例，给消息分配一个全局id，只要消费过该消息，将<id,message>以k-V形式写入redis服务器。消费者消费前去查这个消息是否消费过了。
 
 
 
